--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "author": "Jooy2 <jootc.help@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "chalk": "^5.1.0",
     "eslint": "^8.24.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.20",
-    "ora": "^6.1.2",
     "serve": "^14.0.1"
+  },
+  "dependencies": {
+    "chalk": "^5.1.2",
+    "ora": "^6.1.2"
   }
 }
