--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
 	"printWidth": 100,
 	"tabWidth": 2,
+  "useTabs": false,
 	"singleQuote": true,
 	"quoteProps": "as-needed",
 	"trailingComma": "none",
