--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "serve src/www",
     "www": "npm run serve",
     "dev": "npm run once",
+    "test": "npm run once",
     "format": "prettier .",
     "format:fix": "prettier . --write",
     "reset": "git reset HEAD --hard"
