--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "reset": "git reset HEAD --hard"
   },
   "engines": {
-    "node": "^14.18.3 || >=16.0.0"
+    "node": ">=16.0.0"
   },
   "author": "Jooy2 <jooy2.contact@gmail.com>",
   "license": "MIT",
@@ -30,16 +30,16 @@
   },
   "homepage": "https://github.com/jooy2/nodesand",
   "devDependencies": {
-    "eslint": "^8.44.0",
+    "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.0",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "serve": "^14.2.0"
   },
   "dependencies": {
     "chalk": "^5.3.0",
-    "ora": "^6.3.1"
+    "ora": "^7.0.1"
   }
 }
