--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "www": "npm run serve",
     "dev": "npm run once",
     "test": "npm run once",
+    "lint": "eslint . --ext .js,.mjs,.cjs,.vue src",
     "format": "prettier .",
     "format:fix": "prettier . --write",
     "reset": "git reset HEAD --hard && git clean -f -d -x -e '.idea/' && npm i"
@@ -30,16 +31,18 @@
   },
   "homepage": "https://github.com/jooy2/nodesand",
   "devDependencies": {
-    "eslint": "^8.55.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "nodemon": "^3.1.7",
-    "prettier": "^3.4.2",
-    "serve": "^14.2.4"
+    "@eslint/js": "^9.37.0",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-html": "^8.1.3",
+    "eslint-plugin-n": "^17.23.1",
+    "globals": "^16.4.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
+    "serve": "^14.2.5"
   },
   "dependencies": {
-    "chalk": "^5.3.0",
-    "ora": "^8.1.1"
+    "chalk": "^5.6.2",
+    "ora": "^9.0.0"
   }
 }
