--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "once": "node src/_preload",
     "watch": "nodemon src/_preload",
+    "bench": "node src/_preload/bench.js",
     "serve": "serve src/www",
     "www": "npm run serve",
     "dev": "npm run once",
@@ -39,7 +40,8 @@
     "globals": "^16.5.0",
     "nodemon": "^3.1.11",
     "prettier": "^3.7.4",
-    "serve": "^14.2.5"
+    "serve": "^14.2.5",
+    "tinybench": "^6.0.0"
   },
   "dependencies": {
     "chalk": "^5.6.2",
